--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "third_party/coriander"]
 	path = third_party/coriander
-	url = https://github.com/hughperkins/coriander
+	url = https://github.com/pint1022/coriander
