sync tf-coriander files

--- a/tensorflow/stream_executor/BUILD
+++ b/tensorflow/stream_executor/BUILD
@@ -40,6 +40,7 @@ cc_library(
         '-lclblast',
         '-leasycl',
         '-lclew',
+        # '-lcorianderdnn',
     ],
     visibility = ["//visibility:public"],
     deps = [
